--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -487,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data above indicates a few problems that we will take care in the further steps many of the histograms above are tail heavy, some of the attributes have values that are capped such as median_income and housing_median_age. "
+    "The data above indicates a few problems that we will take care in the further steps. For instance, many of the histograms above are tail heavy, some of the attributes have values that are capped such as median_income and housing_median_age. "
    ]
   },
   {
@@ -511,24 +511,6 @@
     "train_set, test_set = split_train_test(housing, 0.2, 42)\n",
     "print (\"Training set : \",train_set.shape,\"\\n\",\"Test set :\", test_set.shape) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
