handling missing values

--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -1893,26 +1893,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# In the plot above, we can observe the following\n",
-    "# 1. The is strong relation and points are not dispersed\n",
-    "# 2. There is prices cap that can be at $500k line\n",
-    "# 3. There are some less obvious straight lines too\n",
-    "#   a. Lines around the following values $450k, $350k, $280k\n",
-    "# We can try removing the corresponding districts to prevent our algo from learning these data quirks\n"
+    " In the plot above, we can observe the following\n",
+    " 1. The is strong relation and points are not dispersed\n",
+    " 2. There is prices cap that can be at 50000 line \n",
+    " 3. There are some less obvious straight lines too\n",
+    " \t\t\n",
+    "       a. Lines around the following values $450k, $350k, $280k.\n",
+    " \n",
+    "We can try removing the corresponding districts to prevent our algo from learning these data quirks"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Experimenting with attirbutes combination or feature combination"
+    "## Experimenting with attributes combination or feature combination"
    ]
   },
   {
@@ -2219,6 +2217,477 @@
     "# Create a copy of the data i.e training set and separate the features and labels\n",
     "housing = strat_train_set.drop(\"median_house_value\", axis=1) # drop labels for training set\n",
     "housing_labels = strat_train_set[\"median_house_value\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Handling missing values "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9571</th>\n",
+       "      <td>-120.61</td>\n",
+       "      <td>37.36</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>638.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>1.9135</td>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>-121.93</td>\n",
+       "      <td>36.62</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2351.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1063.0</td>\n",
+       "      <td>428.0</td>\n",
+       "      <td>3.7250</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16104</th>\n",
+       "      <td>-122.50</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1620.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>941.0</td>\n",
+       "      <td>328.0</td>\n",
+       "      <td>4.3859</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>563</th>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>891.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>384.0</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>4.9489</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3912</th>\n",
+       "      <td>-118.55</td>\n",
+       "      <td>34.19</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>5862.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3161.0</td>\n",
+       "      <td>1280.0</td>\n",
+       "      <td>3.1106</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "9571     -120.61     37.36                16.0        638.0             NaN   \n",
+       "9814     -121.93     36.62                34.0       2351.0             NaN   \n",
+       "16104    -122.50     37.75                45.0       1620.0             NaN   \n",
+       "563      -122.24     37.75                45.0        891.0             NaN   \n",
+       "3912     -118.55     34.19                18.0       5862.0             NaN   \n",
+       "\n",
+       "       population  households  median_income ocean_proximity  \n",
+       "9571        380.0       132.0         1.9135          INLAND  \n",
+       "9814       1063.0       428.0         3.7250      NEAR OCEAN  \n",
+       "16104       941.0       328.0         4.3859      NEAR OCEAN  \n",
+       "563         384.0       146.0         4.9489        NEAR BAY  \n",
+       "3912       3161.0      1280.0         3.1106       <1H OCEAN  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Getting the missing values for experimentation\n",
+    "sample_incomplete_rows = housing[housing.isnull().any(axis=1)].head()\n",
+    "sample_incomplete_rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Option 1: Getting rid of those particular instances, which contain missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [longitude, latitude, housing_median_age, total_rooms, total_bedrooms, population, households, median_income, ocean_proximity]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_incomplete_rows.dropna(subset=[\"total_bedrooms\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Option 2: Removing the attribute completely"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9571</th>\n",
+       "      <td>-120.61</td>\n",
+       "      <td>37.36</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>638.0</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>1.9135</td>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>-121.93</td>\n",
+       "      <td>36.62</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2351.0</td>\n",
+       "      <td>1063.0</td>\n",
+       "      <td>428.0</td>\n",
+       "      <td>3.7250</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16104</th>\n",
+       "      <td>-122.50</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1620.0</td>\n",
+       "      <td>941.0</td>\n",
+       "      <td>328.0</td>\n",
+       "      <td>4.3859</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>563</th>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>891.0</td>\n",
+       "      <td>384.0</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>4.9489</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3912</th>\n",
+       "      <td>-118.55</td>\n",
+       "      <td>34.19</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>5862.0</td>\n",
+       "      <td>3161.0</td>\n",
+       "      <td>1280.0</td>\n",
+       "      <td>3.1106</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  population  \\\n",
+       "9571     -120.61     37.36                16.0        638.0       380.0   \n",
+       "9814     -121.93     36.62                34.0       2351.0      1063.0   \n",
+       "16104    -122.50     37.75                45.0       1620.0       941.0   \n",
+       "563      -122.24     37.75                45.0        891.0       384.0   \n",
+       "3912     -118.55     34.19                18.0       5862.0      3161.0   \n",
+       "\n",
+       "       households  median_income ocean_proximity  \n",
+       "9571        132.0         1.9135          INLAND  \n",
+       "9814        428.0         3.7250      NEAR OCEAN  \n",
+       "16104       328.0         4.3859      NEAR OCEAN  \n",
+       "563         146.0         4.9489        NEAR BAY  \n",
+       "3912       1280.0         3.1106       <1H OCEAN  "
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_incomplete_rows.drop(\"total_bedrooms\", axis=1)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Option 3: Fill those with some value. (Median in this case)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9571</th>\n",
+       "      <td>-120.61</td>\n",
+       "      <td>37.36</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>638.0</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>1.9135</td>\n",
+       "      <td>INLAND</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>-121.93</td>\n",
+       "      <td>36.62</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2351.0</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>1063.0</td>\n",
+       "      <td>428.0</td>\n",
+       "      <td>3.7250</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16104</th>\n",
+       "      <td>-122.50</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1620.0</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>941.0</td>\n",
+       "      <td>328.0</td>\n",
+       "      <td>4.3859</td>\n",
+       "      <td>NEAR OCEAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>563</th>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>891.0</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>384.0</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>4.9489</td>\n",
+       "      <td>NEAR BAY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3912</th>\n",
+       "      <td>-118.55</td>\n",
+       "      <td>34.19</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>5862.0</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>3161.0</td>\n",
+       "      <td>1280.0</td>\n",
+       "      <td>3.1106</td>\n",
+       "      <td>&lt;1H OCEAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "9571     -120.61     37.36                16.0        638.0           435.0   \n",
+       "9814     -121.93     36.62                34.0       2351.0           435.0   \n",
+       "16104    -122.50     37.75                45.0       1620.0           435.0   \n",
+       "563      -122.24     37.75                45.0        891.0           435.0   \n",
+       "3912     -118.55     34.19                18.0       5862.0           435.0   \n",
+       "\n",
+       "       population  households  median_income ocean_proximity  \n",
+       "9571        380.0       132.0         1.9135          INLAND  \n",
+       "9814       1063.0       428.0         3.7250      NEAR OCEAN  \n",
+       "16104       941.0       328.0         4.3859      NEAR OCEAN  \n",
+       "563         384.0       146.0         4.9489        NEAR BAY  \n",
+       "3912       3161.0      1280.0         3.1106       <1H OCEAN  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "median = housing[\"total_bedrooms\"].median()\n",
+    "sample_incomplete_rows[\"total_bedrooms\"].fillna(median, inplace=True) # option 3\n",
+    "sample_incomplete_rows"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:blue\">Note: when filling the instances with missing values do not forget to save these values, as we will need these values to fill missing values in the test set</span>"
    ]
   },
   {
