adding imputer class

--- a/Housing.ipynb
+++ b/Housing.ipynb
@@ -2691,6 +2691,280 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating an imputer class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# We will make use of the sci-kit learn's imputer class. \n",
+    "# Creating this class is handy as it can be reused to transform the both the test and training data.\n",
+    "# It can also be resused accross other datasets.\n",
+    "\n",
+    "\n",
+    "from sklearn.preprocessing import Imputer\n",
+    "# We select the median stratergy to fill the missing values\n",
+    "imputer = Imputer(strategy=\"median\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Since the median can only be calculated for numerical attributes, we have to remove the textual featuers\n",
+    "housing_num = housing.drop(\"ocean_proximity\", axis =1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Imputer(axis=0, copy=True, missing_values='NaN', strategy=u'median',\n",
+       "    verbose=0)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can now fit the imputer instance over the training data\n",
+    "imputer.fit(housing_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -118.5  ,    34.26 ,    29.   ,  2137.   ,   435.   ,  1168.   ,\n",
+       "         410.   ,     3.536])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The imputer will store all the median values for all the features in statistics_\n",
+    "imputer.statistics_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can cross check that this is same as calculating median of all the features ourselves. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -118.5  ,    34.26 ,    29.   ,  2137.   ,   435.   ,  1168.   ,\n",
+       "         410.   ,     3.536])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_num.median().values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the model goes live, it could be possible that there would be missing values for attributes other than total bedrooms. Hence, we have trained the imputer class accross all the numerical attributes.\n",
+    "\n",
+    "Now we will use this \"trained\" imputer class to transform the missing values in the training set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16512, 8)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = imputer.transform(housing_num)\n",
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Since X here is numpy array we can convert to pandas datafram\n",
+    "housing_tr = pd.DataFrame(X, columns=housing_num.columns,\n",
+    "                          index = list(housing.index.values))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9571</th>\n",
+       "      <td>-120.61</td>\n",
+       "      <td>37.36</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>638.0</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>1.9135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9814</th>\n",
+       "      <td>-121.93</td>\n",
+       "      <td>36.62</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>2351.0</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>1063.0</td>\n",
+       "      <td>428.0</td>\n",
+       "      <td>3.7250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16104</th>\n",
+       "      <td>-122.50</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1620.0</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>941.0</td>\n",
+       "      <td>328.0</td>\n",
+       "      <td>4.3859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>563</th>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.75</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>891.0</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>384.0</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>4.9489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3912</th>\n",
+       "      <td>-118.55</td>\n",
+       "      <td>34.19</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>5862.0</td>\n",
+       "      <td>435.0</td>\n",
+       "      <td>3161.0</td>\n",
+       "      <td>1280.0</td>\n",
+       "      <td>3.1106</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "9571     -120.61     37.36                16.0        638.0           435.0   \n",
+       "9814     -121.93     36.62                34.0       2351.0           435.0   \n",
+       "16104    -122.50     37.75                45.0       1620.0           435.0   \n",
+       "563      -122.24     37.75                45.0        891.0           435.0   \n",
+       "3912     -118.55     34.19                18.0       5862.0           435.0   \n",
+       "\n",
+       "       population  households  median_income  \n",
+       "9571        380.0       132.0         1.9135  \n",
+       "9814       1063.0       428.0         3.7250  \n",
+       "16104       941.0       328.0         4.3859  \n",
+       "563         384.0       146.0         4.9489  \n",
+       "3912       3161.0      1280.0         3.1106  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verifying the missing values have gotten transformed\n",
+    "housing_tr.loc[sample_incomplete_rows.index.values]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
